--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
   <body>
     <header class="header">
       <div class="container header-container">
@@ -29,9 +28,9 @@
             <span class="logo">Web</span>Studio</a
           >
           <ul class="header-nav-list">
-            <li><a class="header-nav-link" href="./index.html">Студія</a></li>
+            <li><a class="header-nav-link is-active" href="./index.html">Студія</a></li>
             <li>
-              <a class="header-nav-link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-nav-link " href="./portfolio.html">Портфоліо</a>
             </li>
             <li><a class="header-nav-link" href="#">Контакти</a></li>
           </ul>
