--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,9 @@
               <a class="header-nav-link" href="./index.html">Студія</a>
             </li>
             <li>
-              <a class="header-nav-link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-nav-link is-active" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li><a class="header-nav-link" href="#">Контакти</a></li>
           </ul>
