--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,23 @@
           <ul class="project-list">
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/techno.jpg"
-                  alt="зображення ноутбука"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/techno.jpg"
+                    alt="зображення ноутбука"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="project-text">Веб-сайт</p>
@@ -101,13 +111,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/poster.jpg"
-                  alt="постер"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/poster.jpg"
+                    alt="постер"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">
                     Постер New Orlean vs Golden Star
@@ -118,13 +138,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/restaurant.jpg"
-                  alt="постер ресторана"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/poster.jpg"
+                    alt="постер"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Ресторан Seafood</h2>
                   <p class="project-text">Додаток</p>
@@ -133,13 +163,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/prime.jpg"
-                  alt="зображення навушників"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/prime.jpg"
+                    alt="зображення навушників"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Проєкт Prime</h2>
                   <p class="project-text">Маркетинг</p>
@@ -148,13 +188,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/boxes.jpg"
-                  alt="зображення коробів"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/boxes.jpg"
+                    alt="зображення коробів"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Проєкт Boxes</h2>
                   <p class="project-text">Додаток</p>
@@ -163,13 +213,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/inspiration.jpg"
-                  alt="зображення манитора"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/inspiration.jpg"
+                    alt="зображення манитора"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Inspiration has no Borders</h2>
                   <p class="project-text">Веб-сайт</p>
@@ -178,13 +238,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/limited-edition.jpg"
-                  alt="зображення журнала"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/limited-edition.jpg"
+                    alt="зображення журнала"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Видання Limited Edition</h2>
                   <p class="project-text">Дизайн</p>
@@ -193,13 +263,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/lab.jpg"
-                  alt="зображення етикетки"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/lab.jpg"
+                    alt="зображення етикетки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Проєкт LAB</h2>
                   <p class="project-text">Маркетинг</p>
@@ -208,13 +288,23 @@
             </li>
             <li class="project-item">
               <a class="project-link" href="#">
-                <img
-                  class="project-image"
-                  src="./images/growing-business.jpg"
-                  alt="зображення ноутбука"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay-thumb">
+                  <img
+                    class="project-image"
+                    src="./images/growing-business.jpg"
+                    alt="зображення ноутбука"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay-thumb_desc">
+                    <p class="overlay-thumb_text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-card">
                   <h2 class="project-title">Growing Business</h2>
                   <p class="project-text">Додаток</p>
