--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="hero-btn-close" data-modal-close>
-                <svg width="11" height="11" class="modal-close-icon">
-                    <use href=""></use>
+                <svg width="18" height="18" class="modal-close-icon">
+                    <use href="./images/symbol-defs.svg#icon-close-black"></use>
                 </svg>
             </button>
         </div>
